Fixed z-index position

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -428,11 +428,12 @@ and (min-width:321px) and (max-height:667px)
 /* Particle Animation */
 #particles-js{
   position: absolute;
-  z-index: 999;
+  z-index: -999;
   width: 100%;
   height: 100%;
   background-repeat: no-repeat;
+}
 
-
-
+.main_login{
+	z-index:  999;
 }
